<resources>
    <string name="app_name">Always Fresh Always Healthy </string>
    <string name="button">Button</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="tab_text_1">FRUTAS Y VERDURAS</string>
    <string name="tab_text_2">LACTEOS Y EMBUTIDOS</string>
    <string name="tab_text_3">CONGELADOS</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="food_input">Food input</string>
    <string name="portion_s">Portion(s)</string>
    <string name="grams">Grams</string>
    <string name="quantity">Quantity:</string>
    <string name="fondo">Fondo</string>
    <string name="add">add</string>
    <string name="add1">ADD</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="bar">bar</string>
    <string name="manzana">manzana</string>
    <string name="verdura">verdura</string>
    <string name="salchicha">salchicha</string>
    <string name="leche">leche</string>
    <string name="congelado">congelado</string>
    <string name="foto">foto</string>

</resources>
