<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >




    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="275dp"
        android:layout_height="288dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/bar"
        android:src="@drawable/bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="45dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/manzana"
        android:src="@drawable/manzana"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="45dp"
        android:layout_height="60dp"
        android:contentDescription="@string/verdura"
        android:src="@drawable/iconofrutas"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/salchicha"
        android:src="@drawable/iconoembutidos"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="49dp"
        android:layout_height="43dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/leche"
        android:src="@drawable/iconoleche"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="46dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="284dp"
        android:contentDescription="@string/congelado"
        android:src="@drawable/iconocongelados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

</android.support.constraint.ConstraintLayout>